# NVEnc meson オプション

option('nvenc_cuda_dir',
  type: 'string',
  value: '',
  description: 'CUDA installation path (default: auto-detect from CUDA_PATH env or /usr/local/cuda)'
)

option('enable_vapoursynth',
  type: 'boolean',
  value: true,
  description: 'Enable VapourSynth reader'
)

option('enable_avisynth',
  type: 'boolean',
  value: true,
  description: 'Enable AviSynth reader'
)

option('enable_libass',
  type: 'boolean',
  value: true,
  description: 'Enable libass subtitle burn-in'
)

option('enable_libplacebo',
  type: 'boolean',
  value: false,
  description: 'Enable libplacebo filters'
)

option('enable_vulkan',
  type: 'boolean',
  value: false,
  description: 'Enable Vulkan support'
)
