# NVEnc meson オプション

option('nvenc_cuda_dir',
  type: 'string',
  value: '',
  description: 'CUDA installation path (default: auto-detect from CUDA_PATH env or /usr/local/cuda)'
)

option('enable_vapoursynth',
  type: 'boolean',
  value: true,
  description: 'Enable VapourSynth reader'
)

option('enable_avisynth',
  type: 'boolean',
  value: true,
  description: 'Enable AviSynth reader'
)

option('enable_libass',
  type: 'boolean',
  value: true,
  description: 'Enable libass subtitle burn-in'
)

option('enable_libplacebo',
  type: 'combo',
  choices: ['auto', 'enabled', 'disabled'],
  value: 'auto',
  description: 'Enable libplacebo filters (auto: enable when libplacebo is detected)'
)

option('libplacebo_static',
  type: 'boolean',
  value: false,
  description: 'Statically link libplacebo on Linux'
)

option('enable_vmaf',
  type: 'combo',
  choices: ['auto', 'enabled', 'disabled'],
  value: 'auto',
  description: 'Enable VMAF support (auto: enable when VMAF headers are detected)'
)

option('libvmaf_static',
  type: 'boolean',
  value: false,
  description: 'Statically link libvmaf on Linux'
)

option('enable_vulkan',
  type: 'combo',
  choices: ['auto', 'enabled', 'disabled'],
  value: 'auto',
  description: 'Enable Vulkan support (auto: enable when Vulkan is detected)'
)
